--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "orders-ms"]
 	path = orders-ms
 	url = https://github.com/Nest-Microservices-Shamir/orders-microservice.git
+[submodule "products-ms"]
+	path = products-ms
+	url = https://github.com/Nest-Microservices-Shamir/products-microservice.git
